--- a/作业2：我的-设置/less/index.less
+++ b/作业2：我的-设置/less/index.less
@@ -2,3 +2,35 @@
     margin: 0;
     padding: 0;
 }
+html,body{
+    font-size: 10px;
+    background-color: #eeeeee;
+}
+/* 公用色号 */
+.color(@color:#e6071b){
+   color: @color;
+}
+header{
+   width: 100%;
+   height: 4rem;
+   background-color: #e6071b;
+   position: fixed;
+   left: 0;
+   top: 0;
+   text-align: center;
+   a{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 4rem;
+    height: 4rem;
+    background: url(../images/back.png) no-repeat center;
+    background-size: 80% 80%;
+   }
+   span{
+    display: block;
+    font-size: 1.7rem;
+    line-height: 4rem;
+    color: #fdffff;
+   }
+}
