--- a/作业2：我的-设置/less/index.less
+++ b/作业2：我的-设置/less/index.less
@@ -6,9 +6,12 @@ html,body{
     font-size: 10px;
     background-color: #eeeeee;
 }
-/* 公用色号 */
-.color(@color:#e6071b){
-   color: @color;
+a{
+    text-decoration: none;
+}
+/* 公用下边框 */
+.borderBottom(@px:1px,@color:#d1d1d1){
+    border-bottom: @px solid @color;
 }
 header{
    width: 100%;
@@ -33,4 +36,25 @@ header{
     line-height: 4rem;
     color: #fdffff;
    }
+}
+/* 主体部分 */
+main{
+    width: 100%;
+    padding-top: 4rem;
+    box-sizing: border-box;
+    a{
+        .borderBottom;
+        padding: 0 1rem;
+        display: block;
+        width: 100%;
+        height: 4rem;
+        line-height: 4rem;
+        font-size: 1.6rem;
+        color: #333333;
+        background-color: #ffffff;
+    }
+    .clear{
+        margin-bottom: 1rem;
+        border: none;
+    }
 }
