--- a/作业2：我的-设置/less/index.css
+++ b/作业2：我的-设置/less/index.css
@@ -56,3 +56,16 @@ main .clear {
   margin-bottom: 1rem;
   border: none;
 }
+/* 底部 */
+footer {
+  width: 100%;
+  height: 4rem;
+  background-color: #ffffff;
+  margin-top: 1.5rem;
+  text-align: center;
+  line-height: 4rem;
+  font-size: 1.6rem;
+}
+footer a {
+  color: #e6071b;
+}
