--- a/作业2：我的-设置/less/index.less
+++ b/作业2：我的-设置/less/index.less
@@ -58,3 +58,16 @@ main{
         border: none;
     }
 }
+/* 底部 */
+footer{
+    width: 100%;
+    height: 4rem;
+    background-color: #ffffff;
+    margin-top: 1.5rem;
+    text-align: center;
+    line-height: 4rem;
+    font-size: 1.6rem;
+    a{
+        color: #e6071b;
+    }
+}
