--- a/作业3：我的商品收藏/less/index.less
+++ b/作业3：我的商品收藏/less/index.less
@@ -2,3 +2,65 @@
     margin: 0;
     padding: 0;
 }
+html,body{
+    font-size: 10px;
+    background-color: #eeeeee;
+}
+a{
+    text-decoration: none;
+}
+/* 公用下边框 */
+.borderBottom(@px:1px,@color:#d1d1d1){
+    border-bottom: @px solid @color;
+}
+header{
+    width: 100%;
+    height: 4rem;
+    background-color: #e6071b;
+    position: fixed;
+    left: 0;
+    top: 0;
+    .logo{
+     position: absolute;
+     left: 0;
+     top: 0;
+     width: 4rem;
+     height: 4rem;
+     background: url(../images/back.png) no-repeat center;
+     background-size: 80% 80%;
+    }
+    span{
+        border: 1px solid #ffffff;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 40%;
+        height: 2rem;
+        line-height: 2rem;
+        border-radius: .3rem;
+        margin: -1rem 0 0 -20%;
+        a{
+            width: 50%;
+            height: 100%;
+            float: left;
+            text-align: center;
+            font-size: 1.4rem;
+            color: #ffffff;
+        }
+        .goo{
+            background-color: #ffffff;
+            color: #e6071b;
+        }
+    }
+    .clear{
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 7rem;
+        height: 100%;
+        text-align: center;
+        line-height: 4rem;
+        color:#ffffff;
+        font-size: 1.3rem;
+    }
+}
