--- a/作业3：我的商品收藏/less/index.css
+++ b/作业3：我的商品收藏/less/index.css
@@ -10,6 +10,9 @@ body {
 a {
   text-decoration: none;
 }
+.color {
+  color: #e6071b !important;
+}
 /* 公用下边框 */
 header {
   width: 100%;
@@ -18,6 +21,7 @@ header {
   position: fixed;
   left: 0;
   top: 0;
+  z-index: 3;
 }
 header .logo {
   position: absolute;
@@ -61,4 +65,78 @@ header .clear {
   line-height: 4rem;
   color: #ffffff;
   font-size: 1.3rem;
+}
+/* 主体部分 */
+ul {
+  width: 100%;
+  background-color: #ffffff;
+  padding: 4rem 1rem 0;
+  box-sizing: border-box;
+}
+ul li {
+  list-style: none;
+  padding: 1rem 0;
+  border-bottom: 1px solid #d8d8d8;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+ul li .img {
+  position: relative;
+}
+ul li .img img {
+  position: absolute;
+}
+ul li .img .soldOut {
+  width: 4.5rem;
+  height: 4.5rem;
+  left: 0.6rem;
+  top: 0.6rem;
+  z-index: 2;
+}
+ul li .img .logo {
+  width: 6rem;
+  height: 6rem;
+  display: inline-block;
+}
+ul li .text {
+  padding-left: 7rem;
+}
+ul li .text p {
+  font-size: 1.4rem;
+  line-height: 1.8rem;
+  color: #333333;
+  overflow: hidden;
+}
+ul li .cote {
+  width: 80%;
+  height: 100%;
+  float: right;
+  font-style: 1.2rem;
+  line-height: 2.5rem;
+  overflow: hidden;
+}
+ul li .cote .price {
+  float: left;
+}
+ul li .cote .price i {
+  font-style: normal;
+  color: #666666;
+}
+ul li .cote .price span {
+  font-size: 1.8rem;
+  color: #666666;
+}
+ul li .cote .price .original {
+  font-size: 1.2rem;
+  color: #978888;
+  text-decoration: line-through;
+}
+ul li .cote a {
+  width: 5.4rem;
+  height: 2.5rem;
+  text-align: center;
+  border-radius: 0.3rem;
+  border: 0.1rem solid #d8d8d8;
+  float: right;
+  color: #888888;
 }
