--- a/作业4：代金券/less/index.less
+++ b/作业4：代金券/less/index.less
@@ -2,3 +2,39 @@
     margin: 0;
     padding: 0;
 }
+html,body{
+    font-size: 10px;
+    background-color: #eeeeee;
+}
+a{
+    text-decoration: none;
+}
+/* 公用下边框 */
+.borderBottom(@px:1px,@color:#d1d1d1){
+    border-bottom: @px solid @color;
+}
+header{
+   width: 100%;
+   height: 4rem;
+   background-color: #e6071b;
+   position: fixed;
+   left: 0;
+   top: 0;
+   text-align: center;
+   a{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 4rem;
+    height: 4rem;
+    background: url(../images/back.png) no-repeat center;
+    background-size: 80% 80%;
+   }
+   span{
+    display: block;
+    font-size: 1.7rem;
+    line-height: 4rem;
+    color: #fdffff;
+   }
+}
+/* 主体样式 */
