--- a/作业4：代金券/less/index.css
+++ b/作业4：代金券/less/index.css
@@ -19,6 +19,7 @@ header {
   left: 0;
   top: 0;
   text-align: center;
+  z-index: 4;
 }
 header a {
   position: absolute;
@@ -36,3 +37,107 @@ header span {
   color: #fdffff;
 }
 /* 主体样式 */
+main {
+  padding: 5rem 1rem 0;
+  margin-top: -1rem;
+  width: 100%;
+  box-sizing: border-box;
+}
+main .gear {
+  width: 100%;
+  height: 1.6rem;
+  display: block;
+  position: relative;
+  background: url(../images/border.png);
+}
+main .top {
+  /*  position: relative; */
+  padding: 1rem;
+  margin-top: -0.8rem;
+  height: 100%;
+  width: 100%;
+  background: #fff;
+  box-sizing: border-box;
+}
+main .top .toptext {
+  margin-top: 1rem;
+  position: relative;
+}
+main .top .toptext .topmain {
+  width: 80%;
+  display: flex;
+}
+main .top .toptext .topmain img {
+  margin-right: 0.5rem;
+  width: 3.5rem;
+  height: 3.5rem;
+  border-radius: 50%;
+}
+main .top .toptext .topmain .introduce {
+  font-size: 1.6rem;
+  color: #666666;
+}
+main .top .toptext .touse {
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: inline-block;
+  height: 2rem;
+  width: 5.5rem;
+  line-height: 2rem;
+  text-align: center;
+  color: white;
+  background-color: #e6071b;
+}
+main .top .toptext .touse2 {
+  position: absolute;
+  right: 0;
+  top: 0.5rem;
+  transform: rotate(-30deg);
+  color: #b7b7b7;
+  background-color: white;
+  border: 1px solid #b7b7b7;
+}
+main .top .round {
+  position: relative;
+  margin-top: 1rem;
+  width: 100%;
+  height: 0.1rem;
+  background-color: #d8d8d8;
+}
+main .top .round span:nth-of-type(1) {
+  position: absolute;
+  left: -15px;
+  top: -5px;
+  height: 1rem;
+  width: 1rem;
+  background: #eee;
+  border-radius: 50%;
+}
+main .top .round span:nth-of-type(2) {
+  position: absolute;
+  right: -15px;
+  top: -5px;
+  height: 1rem;
+  width: 1rem;
+  background: #eee;
+  border-radius: 50%;
+}
+main .top .Ticket {
+  margin-top: 0.7rem;
+  font-size: 1.4rem;
+  text-indent: 0.4rem;
+  color: #666666;
+  height: 2.5rem;
+}
+main .top .Ticket span {
+  font-size: 1.6rem;
+  color: #e6071b;
+}
+main .gearbottom {
+  width: 100%;
+  height: 1.6rem;
+  display: block;
+  margin-top: -0.8rem;
+  background: url(../images/border.png);
+}
