--- a/作业5：请假条/less/index.css
+++ b/作业5：请假条/less/index.css
@@ -2,3 +2,43 @@
   margin: 0;
   padding: 0;
 }
+html,
+body {
+  font-size: 10px;
+}
+a {
+  text-decoration: none;
+}
+/* 公用下边框 */
+header {
+  width: 100%;
+  height: 6.5rem;
+  line-height: 6.5rem;
+  font-size: 2.6rem;
+  text-align: center;
+  background-color: #72cadd;
+  color: white;
+}
+header p {
+  display: inline-block;
+}
+header span {
+  width: 2.5rem;
+  height: 4rem;
+  margin-top: 1rem;
+  display: inline-block;
+}
+header span:nth-of-type(1) {
+  float: left;
+  margin-left: 1rem;
+  background: url(../image/icon_arr_back.png) no-repeat center;
+  background-size: contain;
+}
+header span:nth-of-type(2) {
+  width: 3rem;
+  height: 4rem;
+  float: right;
+  margin-right: 0.5rem;
+  background: url(../image/icon_arr_more.png) no-repeat 0px 11px;
+  background-size: contain;
+}
