--- a/作业5：请假条/less/index.css
+++ b/作业5：请假条/less/index.css
@@ -42,3 +42,31 @@ header span:nth-of-type(2) {
   background: url(../image/icon_arr_more.png) no-repeat 0px 11px;
   background-size: contain;
 }
+/* 主体 */
+main .submit {
+  width: 100%;
+  height: 6rem;
+  background-color: #f2f2f2;
+  border-bottom: 3px solid #d1d1d1;
+  text-indent: 1.5rem;
+  font-size: 2rem;
+  line-height: 6rem;
+  color: #505050;
+}
+main dl {
+  width: 97%;
+  border-bottom: 1px solid #d1d1d1;
+  margin: 0 auto;
+  height: 4.5rem;
+  line-height: 4.5rem;
+  color: #808080;
+  font-size: 1.6rem;
+}
+main dl dt {
+  width: 35%;
+  float: left;
+}
+main dl dd {
+  width: 65%;
+  float: left;
+}
