--- a/作业5：请假条/less/index.less
+++ b/作业5：请假条/less/index.less
@@ -44,3 +44,33 @@ header{
         }
     }
 }
+/* 主体 */
+main{
+    .submit{
+        width: 100%;
+        height: 6rem;
+        background-color: #f2f2f2;
+        .borderBottom(3px);
+        text-indent: 1.5rem;
+        font-size: 2rem;
+        line-height: 6rem;
+        color: #505050;
+    }
+    dl{
+        width: 97%;
+        .borderBottom;
+        margin: 0 auto;
+        height: 4.5rem;
+        line-height: 4.5rem;
+        color: #808080;
+        font-size: 1.6rem;
+        dt{
+            width: 35%;
+            float: left;
+        }
+        dd{
+            width: 65%;
+            float: left;
+        }
+    }
+}
